REALLY fix the centering issue with the nav bar on mobile screens

--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ nav {
 }
 
 nav ul {
-  width: 100%;
   text-align: center;
   list-style-type: none;
-  margin: 0 auto;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 nav ul a:link,
